--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.4.0"
   },
   "devDependencies": {
+    "normalize.css": "^8.0.0",
     "react-scripts": "1.1.4"
   },
   "scripts": {
