--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "react-dom": "^16.4.0"
   },
   "devDependencies": {
+    "@types/jest": "^23.0.1",
+    "@types/node": "^10.3.2",
+    "@types/react": "^16.3.17",
+    "@types/react-dom": "^16.0.6",
     "normalize.css": "^8.0.0",
-    "react-scripts": "1.1.4"
+    "react-scripts-ts": "2.16.0",
+    "typescript": "^2.9.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "react-scripts-ts start",
+    "build": "react-scripts-ts build",
+    "test": "react-scripts-ts test --env=jsdom"
   }
 }
