--- a/package.json
+++ b/package.json
@@ -21,5 +21,13 @@
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "**/src/**/*.{tsx}",
+      "!**/node_modules/**",
+      "!**/lib/**"
+    ],
+    "coverageReporters": ["lcov"]
   }
 }
