--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/node": "^10.3.2",
     "@types/react": "^16.3.17",
     "@types/react-dom": "^16.0.6",
-    "jest-junit": "^5.0.0",
+    "jest-junit": "^4.0.0",
     "normalize.css": "^8.0.0",
     "react-scripts-ts": "2.16.0",
     "typescript": "^2.9.1"
@@ -21,7 +21,8 @@
   "scripts": {
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom"
+    "test": "react-scripts-ts test --env=jsdom",
+    "test:ci": "react-scripts-ts test --env=jsdom --ci --testResultsProcessor ./node_modules/jest-junit"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -31,6 +32,6 @@
     ],
     "coverageReporters": [
       "lcov"
-    ]
+    ]  
   }
 }
