--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
       
       - run:
           name: Jest Test Suite
-          command: yarn test:ci"
+          command: "yarn test:ci"
           environment:
               JEST_JUNIT_OUTPUT: "reports/junit/js-test-results.xml"
               
