add back jest settings

--- a/package.json
+++ b/package.json
@@ -23,5 +23,20 @@
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
     "test:ci": "react-scripts-ts test --env=jsdom --ci --testResultsProcessor ./node_modules/jest-junit"
+  },
+  "jest": {
+    "collectCoverageFrom" : [
+      "src/**/*.{js,jsx}",
+      "!<rootDir>/node_modules/"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 90,
+        "functions": 90,
+        "lines": 90,
+        "statements": 90
+      }
+    },
+    "coverageReporters": ["lcov"]
   }
 }
