--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,13 +50,13 @@ jobs:
             yarn test:ci
             ./cc-test-reporter after-build --exit-code $?
           environment:
-            JEST_JUNIT_OUTPUT: "coverage/junit/js-test-results.xml"
+            JEST_JUNIT_OUTPUT: "reports/junit/js-test-results.xml"
               
       - store_test_results:
-          path: coverage/junit
+          path: reports/junit
           
       - store_artifacts:
-          path: coverage
+          path: reports/junit
           
 
 
