--- a/package.json
+++ b/package.json
@@ -4,24 +4,36 @@
   "version": "0.1.0",
   "private": true,
   "repository": "https://github.com/brianespinosa/bjeco.git",
-  "dependencies": {
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0"
+  "installConfig": {
+    "pnp": true
   },
-  "devDependencies": {
-    "@types/jest": "^23.0.1",
-    "@types/node": "^10.3.2",
-    "@types/react": "^16.3.17",
-    "@types/react-dom": "^16.0.6",
-    "jest-junit": "^4.0.0",
-    "normalize.css": "^8.0.0",
-    "react-scripts-ts": "2.16.0",
-    "typescript": "^2.9.1"
+  "dependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom",
-    "test:ci": "react-scripts-ts test --env=jsdom --ci --coverage --testResultsProcessor ./node_modules/jest-junit"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
