--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "@yarnpkg/pnpify": "^2.0.0-rc.22",
+    "eslint": "^6.8.0",
+    "husky": ">=4",
+    "lint-staged": ">=10",
+    "prettier": "2.0.5"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,10 +41,11 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "husky": ">=4",
-    "lint-staged": ">=10",
-    "prettier": "2.0.5"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "husky": {
     "hooks": {
