--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,16 @@
 
 # dependencies
 /node_modules
+
+# yarn v1 w/ PnP
 /.pnp
 .pnp.js
+
+# yarn v2
+.yarn/*
+# !.yarn/cache
+!.yarn/releases
+!.yarn/plugins
 
 # testing
 /coverage
