--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,63 +1,31 @@
-# Javascript Node CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-javascript/ for more details
-#
-version: 2
+version: 2.1
+
+orbs:
+  node: circleci/node@3.0.1
+
 jobs:
-  build:
-    environment:
-      CC_TEST_REPORTER_ID: 068aba62566a3bdb294f73c1f7beed93a8634da3e7a003621dcd11393ce57cd2
-      
-    docker:
-      # specify the version you desire here
-      - image: circleci/node:7.10
-      # - image: circleci/php:7.1.9-browsers
-      
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mongo:3.4.4
-
-    working_directory: ~/repo
-
+  test:
+    executor:
+      name: node/default
     steps:
       - checkout
-
-      # Download and cache dependencies
       - restore_cache:
+          name: Restore Yarn Package Cache
           keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-
-      - run: yarn install
-
+            - yarn-packages-{{ checksum "yarn.lock" }}
+      - run:
+          name: Install Dependencies
+          command: yarn install --immutable
       - save_cache:
+          name: Save Yarn Package Cache
+          key: yarn-packages-{{ checksum "yarn.lock" }}
           paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-        
+            - ~/.cache/yarn
       - run:
-          name: Setup Code Climate test-reporter
-          command: |
-            curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-            chmod +x ./cc-test-reporter
-      
-      - run:
-          name: Jest Test Suite
-          command: |
-            ./cc-test-reporter before-build
-            yarn test:ci
-            ./cc-test-reporter after-build --exit-code $?
-          environment:
-            JEST_JUNIT_OUTPUT: "reports/junit/js-test-results.xml"
-              
-      - store_test_results:
-          path: reports/junit
-          
-      - store_artifacts:
-          path: reports/junit
-          
+          command: yarn run test
+          name: Run tests
 
-
-
+workflows:
+  build-and-test:
+    jobs:
+      - test
