--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,21 +9,23 @@ jobs:
       name: node/default
     steps:
       - checkout
-      - restore_cache:
-          name: Restore Yarn Package Cache
-          keys:
-            - yarn-packages-{{ checksum "yarn.lock" }}
-      - run:
-          name: Install Dependencies
-          command: yarn install --immutable
-      - save_cache:
-          name: Save Yarn Package Cache
-          key: yarn-packages-{{ checksum "yarn.lock" }}
-          paths:
-            - ~/.cache/yarn
-      - run:
-          command: yarn run test
-          name: Run tests
+      - node/with-cache:
+        steps:
+          - restore_cache:
+              name: Restore Yarn Package Cache
+              keys:
+                - yarn-packages-{{ checksum "yarn.lock" }}
+          - run:
+              name: Install Dependencies
+              command: yarn install --immutable
+          - save_cache:
+              name: Save Yarn Package Cache
+              key: yarn-packages-{{ checksum "yarn.lock" }}
+              paths:
+                - ~/.cache/yarn
+          - run:
+              command: yarn run test
+              name: Run tests
 
 workflows:
   build-and-test:
