--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,31 +3,7 @@ version: 2.1
 orbs:
   node: circleci/node@3.0.1
 
-jobs:
-  test:
-    executor:
-      name: node/default
-    steps:
-      - checkout
-      - node/with-cache:
-        steps:
-          - restore_cache:
-              name: Restore Yarn Package Cache
-              keys:
-                - yarn-packages-{{ checksum "yarn.lock" }}
-          - run:
-              name: Install Dependencies
-              command: yarn install --immutable
-          - save_cache:
-              name: Save Yarn Package Cache
-              key: yarn-packages-{{ checksum "yarn.lock" }}
-              paths:
-                - ~/.cache/yarn
-          - run:
-              command: yarn run test
-              name: Run tests
-
 workflows:
-  build-and-test:
+  test:
     jobs:
-      - test
+      - node/test
