--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,20 @@ version: 2.1
 orbs:
   node: circleci/node@3.0.1
 
+jobs:
+  test:
+    executor:
+      name: node/default
+      tag: '13'
+    steps:
+      - checkout
+      - node/install-packages:
+          pkg-manager: yarn
+      - run:
+          command: yarn test
+          name: Run YARN tests
+
 workflows:
   test:
     jobs:
-      - node/test
+      - test
