--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           pkg-manager: yarn
       - run:
           command: yarn test
-          name: Run YARN tests
+          name: Run tests
 
 workflows:
   test:
