--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,8 @@ jobs:
       - run:
           command: yarn test
           name: Run tests
+      - store_test_results:
+          path: test-results
 
 workflows:
   test:
