--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "eslint": "6.8.0",
     "husky": "4.2.5",
+    "jest-junit": "11.1.0",
     "lint-staged": "10.2.11",
     "prettier": "2.0.5"
   },
