--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           command: yarn test --ci --reporters=jest-junit
           name: Run tests
       - store_test_results:
-          path: junit.xml
+          path: coverage
 
 workflows:
   test:
