Store all artifacts by directory?

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
       - store_test_results:
           path: ./coverage/junit/
       - store_artifacts:
-          path: ./coverage/junit
+          path: ./coverage
 
 workflows:
   test:
