--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
   node: circleci/node@3.0.1
 
 jobs:
-  test:
+  install:
     executor:
       name: node/default
       tag: '14.5.0'
@@ -12,9 +12,21 @@ jobs:
       - checkout
       - node/install-packages:
           pkg-manager: yarn
+      - save_cache:
+          key: bjeco-INSTALLED-{{ .Revision }}
+          paths:
+            - ~/
+
+  test:
+    executor:
+      name: node/default
+      tag: '14.5.0'
+    steps:
+      - restore_cache:
+          key: bjeco-INSTALLED-{{ .Revision }}
       - run:
           command: yarn test --ci --runInBand --reporters=default --reporters=jest-junit
-          name: Run tests
+          name: Run Jest
           environment:
             JEST_JUNIT_OUTPUT_DIR: ./coverage/junit/
       - store_test_results:
@@ -22,7 +34,28 @@ jobs:
       - store_artifacts:
           path: ./coverage
 
+  lint:
+    executor:
+      name: node/default
+      tag: '14.5.0'
+    steps:
+      - restore_cache:
+          key: bjeco-INSTALLED-{{ .Revision }}
+      - run:
+          name: Run Eslint
+          command: yarn lint --format junit --output-file ./coverage/eslint.xml
+      - store_test_results:
+          path: ./coverage
+      - store_artifacts:
+          path: ./coverage
+
 workflows:
-  test:
+  quality:
     jobs:
-      - test
+      - install
+      - lint:
+          requires:
+            - install
+      - test:
+          requires:
+            - install
