--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-router-dom": "6.0.0-beta.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "3.4.3",
     "typescript": "3.9.7"
   },
   "devDependencies": {
@@ -58,18 +58,18 @@
     "@testing-library/jest-dom": "5.11.1",
     "@testing-library/react": "10.4.7",
     "@testing-library/user-event": "12.0.15",
-    "eslint": "7.7.0",
-    "eslint-plugin-jest": "^23.20.0",
-    "eslint-plugin-json-format": "^2.0.1",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-react-hooks": "^4.1.0",
-    "eslint-plugin-unicorn": "^21.0.0",
+    "eslint": "6.8.0",
+    "eslint-plugin-jest": "23.20.0",
+    "eslint-plugin-json-format": "2.0.1",
+    "eslint-plugin-jsx-a11y": "6.3.1",
+    "eslint-plugin-react": "7.20.6",
+    "eslint-plugin-react-hooks": "4.1.0",
+    "eslint-plugin-unicorn": "19.0.1",
     "husky": "1.3.1",
     "jest-junit": "11.1.0",
     "lint-staged": "10.2.11"
   },
   "engines": {
-    "node": "^14.5.0"
+    "node": "14.5.0"
   }
 }
