Add build step to CI to make sure site is not broken

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,6 +49,19 @@ jobs:
       - store_artifacts:
           path: ./coverage
 
+  build:
+    executor:
+      name: node/default
+      tag: '14.5.0'
+    steps:
+      - restore_cache:
+          key: bjeco-INSTALLED-{{ .Revision }}
+      - run:
+          name: Build App
+          command: yarn build
+      - store_artifacts:
+          path: ./build
+
 workflows:
   quality:
     jobs:
@@ -59,3 +72,7 @@ workflows:
       - test:
           requires:
             - install
+      - build:
+          requires:
+            - lint
+            - test
