--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   install:
     executor:
       name: node/default
-      tag: '14.5.0'
+      tag: '12.x'
     steps:
       - checkout
       - node/install-packages:
@@ -20,7 +20,7 @@ jobs:
   test:
     executor:
       name: node/default
-      tag: '14.5.0'
+      tag: '12.x'
     steps:
       - restore_cache:
           key: bjeco-INSTALLED-{{ .Revision }}
@@ -37,7 +37,7 @@ jobs:
   lint:
     executor:
       name: node/default
-      tag: '14.5.0'
+      tag: '12.x'
     steps:
       - restore_cache:
           key: bjeco-INSTALLED-{{ .Revision }}
@@ -52,7 +52,7 @@ jobs:
   build:
     executor:
       name: node/default
-      tag: '14.5.0'
+      tag: '12.x'
     steps:
       - restore_cache:
           key: bjeco-INSTALLED-{{ .Revision }}
