--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,22 +17,22 @@ jobs:
           paths:
             - ~/
 
-  test:
-    executor:
-      name: node/default
-      tag: 'lts'
-    steps:
-      - restore_cache:
-          key: bjeco-INSTALLED-{{ .Revision }}
-      - run:
-          command: yarn test --ci --runInBand --reporters=default --reporters=jest-junit
-          name: Run Jest
-          environment:
-            JEST_JUNIT_OUTPUT_DIR: ./coverage/junit/
-      - store_test_results:
-          path: ./coverage/junit/
-      - store_artifacts:
-          path: ./coverage
+  # test:
+  #   executor:
+  #     name: node/default
+  #     tag: 'lts'
+  #   steps:
+  #     - restore_cache:
+  #         key: bjeco-INSTALLED-{{ .Revision }}
+  #     - run:
+  #         command: yarn test --ci --runInBand --reporters=default --reporters=jest-junit
+  #         name: Run Jest
+  #         environment:
+  #           JEST_JUNIT_OUTPUT_DIR: ./coverage/junit/
+  #     - store_test_results:
+  #         path: ./coverage/junit/
+  #     - store_artifacts:
+  #         path: ./coverage
 
   lint:
     executor:
@@ -69,10 +69,10 @@ workflows:
       - lint:
           requires:
             - install
-      - test:
-          requires:
-            - install
+      # - test:
+      #     requires:
+      #       - install
       - build:
           requires:
             - lint
-            - test
+            # - test
