--- a/package.json
+++ b/package.json
@@ -29,16 +29,6 @@
       "prettier --write"
     ]
   },
-  "prettier": "@bjeco/prettier-config",
-  "eslintConfig": {
-    "extends": "@bjeco",
-    "rules": {
-      "react/react-in-jsx-scope": "off"
-    }
-  },
-  "stylelint": {
-    "extends": "@bjeco/stylelint-config"
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -51,25 +41,33 @@
       "last 1 safari version"
     ]
   },
+  "prettier": "@bjeco/prettier-config",
+  "eslintConfig": {
+    "extends": "@bjeco",
+    "rules": {
+      "react/react-in-jsx-scope": "off"
+    }
+  },
+  "stylelint": {
+    "extends": "@bjeco/stylelint-config"
+  },
   "dependencies": {
-    "history": "5.0.0",
+    "antd": "4.6.3",
     "next": "9.5.2",
     "node-sass": "4.14.1",
     "normalize.css": "8.0.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-router-dom": "6.0.0-beta.0",
-    "react-scripts": "3.4.3",
-    "typescript": "3.9.7"
+    "react-dom": "16.13.1"
   },
   "devDependencies": {
-    "@bjeco/eslint-config": "*",
-    "@bjeco/prettier-config": "*",
-    "@bjeco/stylelint-config": "*",
+    "@bjeco/eslint-config": "1.3.0",
+    "@bjeco/prettier-config": "latest",
+    "@bjeco/stylelint-config": "latest",
     "@testing-library/dom": "7.21.5",
     "@testing-library/jest-dom": "5.11.1",
     "@testing-library/react": "10.4.7",
     "@testing-library/user-event": "12.0.15",
+    "eslint": "7.7.0",
     "eslint-plugin-jest": "23.20.0",
     "eslint-plugin-json-format": "2.0.1",
     "eslint-plugin-jsx-a11y": "6.3.1",
@@ -77,6 +75,7 @@
     "eslint-plugin-react-hooks": "4.1.0",
     "eslint-plugin-unicorn": "19.0.1",
     "husky": "1.3.1",
+    "jest": "26.4.2",
     "jest-junit": "11.1.0",
     "lint-staged": "10.2.11",
     "sass": "1.26.10"
