--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  node: circleci/node@3.0.1
+  node: circleci/node@5.0.2
 
 jobs:
   install:
@@ -11,7 +11,7 @@ jobs:
     steps:
       - checkout
       - node/install-packages:
-          pkg-manager: yarn
+          pkg-manager: yarn-berry
       - save_cache:
           key: bjeco-INSTALLED-{{ .Revision }}
           paths:
