--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,23 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# compiled output
+/dist
+/tmp
+/out-tsc
+
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
 
 # testing
 /coverage
@@ -16,10 +30,19 @@
 /build
 
 # misc
-.DS_Store
+/.sass-cache
+/connect.lock
+/coverage
+/libpeerconnection.log
+/typings
 *.pem
 
+# System Files
+.DS_Store
+Thumbs.db
+
 # debug
+testem.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
