--- a/package.json
+++ b/package.json
@@ -87,14 +87,15 @@
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.29.4",
     "eslint-plugin-react-hooks": "4.4.0",
-    "husky": "1.3.1",
+    "husky": "7.0.4",
     "jest": "27.2.3",
     "jest-junit": "11.1.0",
-    "lint-staged": "10.2.11",
+    "lint-staged": "12.4.0",
     "nx": "13.10.3",
-    "prettier": "^2.5.1",
+    "prettier": "2.6.2",
     "react-test-renderer": "18.0.0",
-    "sass": "1.26.10",
+    "sass": "1.50.1",
+    "stylelint": "14.7.1",
     "ts-jest": "27.0.5",
     "typescript": "~4.6.2"
   },
