--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "antd": "4.6.3",
     "core-js": "^3.6.5",
     "fathom-client": "3.4.1",
+    "framer-motion": "6.3.1",
     "next": "12.1.5",
     "normalize.css": "8.0.1",
     "react": "18.0.0",
