--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test",
-    "e2e": "nx e2e bjeco-e2e"
+    "e2e": "nx e2e bjeco-e2e",
+    "nx-latest": "nx migrate latest",
+    "nx-migrate": "yarn install && nx migrate --run-migrations"
   },
   "husky": {
     "hooks": {
@@ -60,28 +62,27 @@
   "devDependencies": {
     "@bjeco/prettier-config": "latest",
     "@bjeco/stylelint-config": "latest",
-    "@nrwl/cli": "13.10.3",
-    "@nrwl/cypress": "13.10.3",
-    "@nrwl/eslint-plugin-nx": "13.10.3",
-    "@nrwl/jest": "13.10.3",
-    "@nrwl/linter": "13.10.3",
-    "@nrwl/next": "^13.10.3",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/react": "13.10.3",
-    "@nrwl/web": "13.10.3",
-    "@nrwl/workspace": "13.10.3",
-    "@testing-library/react": "13.0.0",
-    "@testing-library/react-hooks": "7.0.2",
-    "@types/jest": "27.0.2",
+    "@nrwl/cli": "14.0.2",
+    "@nrwl/cypress": "14.0.2",
+    "@nrwl/eslint-plugin-nx": "14.0.2",
+    "@nrwl/jest": "14.0.2",
+    "@nrwl/linter": "14.0.2",
+    "@nrwl/next": "14.0.2",
+    "@nrwl/nx-cloud": "13.3.1",
+    "@nrwl/react": "14.0.2",
+    "@nrwl/web": "14.0.2",
+    "@nrwl/workspace": "14.0.2",
+    "@testing-library/react": "13.1.1",
+    "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
-    "@types/react": "18.0.0",
+    "@types/react": "18.0.1",
     "@types/react-dom": "18.0.0",
     "@typescript-eslint/eslint-plugin": "~5.18.0",
     "@typescript-eslint/parser": "~5.18.0",
-    "babel-jest": "27.2.3",
+    "babel-jest": "27.5.1",
     "cypress": "^9.1.0",
     "eslint": "~8.12.0",
-    "eslint-config-next": "12.1.2",
+    "eslint-config-next": "12.1.5",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.26.0",
@@ -89,15 +90,15 @@
     "eslint-plugin-react": "7.29.4",
     "eslint-plugin-react-hooks": "4.4.0",
     "husky": "7.0.4",
-    "jest": "27.2.3",
+    "jest": "27.5.1",
     "jest-junit": "11.1.0",
     "lint-staged": "12.4.0",
-    "nx": "13.10.3",
+    "nx": "14.0.2",
     "prettier": "2.6.2",
     "react-test-renderer": "18.0.0",
     "sass": "1.50.1",
     "stylelint": "14.7.1",
-    "ts-jest": "27.0.5",
+    "ts-jest": "27.1.4",
     "typescript": "~4.6.2"
   },
   "packageManager": "yarn@3.2.0"
