--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
   },
   "dependencies": {
     "antd": "4.6.3",
+    "ariakit": "2.0.0-next.24",
+    "clsx": "1.1.1",
     "core-js": "^3.6.5",
     "fathom-client": "3.4.1",
     "framer-motion": "6.3.1",
@@ -99,6 +101,7 @@
     "sass": "1.50.1",
     "stylelint": "14.7.1",
     "ts-jest": "27.1.4",
+    "ts-node": "9.1.1",
     "typescript": "~4.6.2"
   },
   "packageManager": "yarn@3.2.0"
