--- a/package.json
+++ b/package.json
@@ -64,16 +64,17 @@
   "devDependencies": {
     "@bjeco/prettier-config": "latest",
     "@bjeco/stylelint-config": "latest",
-    "@nrwl/cli": "14.0.2",
-    "@nrwl/cypress": "14.0.2",
-    "@nrwl/eslint-plugin-nx": "14.0.2",
-    "@nrwl/jest": "14.0.2",
-    "@nrwl/linter": "14.0.2",
-    "@nrwl/next": "14.0.2",
+    "@nrwl/cli": "14.0.3",
+    "@nrwl/cypress": "14.0.3",
+    "@nrwl/eslint-plugin-nx": "14.0.3",
+    "@nrwl/jest": "14.0.3",
+    "@nrwl/linter": "14.0.3",
+    "@nrwl/next": "14.0.3",
     "@nrwl/nx-cloud": "13.3.1",
-    "@nrwl/react": "14.0.2",
-    "@nrwl/web": "14.0.2",
-    "@nrwl/workspace": "14.0.2",
+    "@nrwl/react": "14.0.3",
+    "@nrwl/storybook": "14.0.3",
+    "@nrwl/web": "14.0.3",
+    "@nrwl/workspace": "14.0.3",
     "@testing-library/react": "13.1.1",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
@@ -95,7 +96,7 @@
     "jest": "27.5.1",
     "jest-junit": "11.1.0",
     "lint-staged": "12.4.0",
-    "nx": "14.0.2",
+    "nx": "14.0.3",
     "prettier": "2.6.2",
     "react-test-renderer": "18.0.0",
     "sass": "1.50.1",
