--- a/package.json
+++ b/package.json
@@ -15,25 +15,8 @@
     "e2e:blocks": "nx e2e blocks-e2e",
     "storybook:blocks": "nx run blocks:storybook",
     "nx-latest": "nx migrate latest",
-    "nx-migrate": "yarn install && nx migrate --run-migrations"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{css,scss,sass,less}": [
-      "stylelint --fix",
-      "prettier --write"
-    ],
-    "*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "prettier --write"
-    ],
-    "*.{md,mdx,html}": [
-      "prettier --write"
-    ]
+    "nx-migrate": "yarn install && nx migrate --run-migrations",
+    "postinstall": "husky install"
   },
   "browserslist": {
     "production": [
@@ -48,20 +31,16 @@
     ]
   },
   "prettier": "@bjeco/prettier-config",
-  "stylelint": {
-    "extends": "@bjeco/stylelint-config"
-  },
   "resolutions": {
     "glob-parent": "5.1.2",
     "nth-check": "2.0.1"
   },
   "dependencies": {
-    "antd": "4.6.3",
-    "ariakit": "2.0.0-next.24",
+    "ariakit": "2.0.0-next.36",
     "clsx": "1.1.1",
     "core-js": "^3.6.5",
-    "fathom-client": "3.4.1",
-    "framer-motion": "6.3.1",
+    "fathom-client": "3.5.0",
+    "framer-motion": "6.5.1",
     "next": "12.1.5",
     "normalize.css": "8.0.1",
     "react": "18.0.0",
@@ -112,7 +91,7 @@
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.29.4",
     "eslint-plugin-react-hooks": "4.4.0",
-    "husky": "7.0.4",
+    "husky": "8.0.1",
     "jest": "27.5.1",
     "jest-junit": "11.1.0",
     "lint-staged": "12.4.0",
