--- a/libs/blocks/project.json
+++ b/libs/blocks/project.json
@@ -6,18 +6,14 @@
   "targets": {
     "build": {
       "executor": "@nrwl/web:rollup",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "options": {
         "buildableProjectDepsInPackageJsonType": "dependencies",
         "outputPath": "dist/libs/blocks",
         "tsConfig": "libs/blocks/tsconfig.lib.json",
         "project": "libs/blocks/package.json",
         "entryFile": "libs/blocks/src/index.ts",
-        "external": [
-          "react/jsx-runtime"
-        ],
+        "external": ["react/jsx-runtime"],
         "rollupConfig": "@nrwl/react/plugins/bundle-rollup",
         "compiler": "babel",
         "assets": [
@@ -31,20 +27,14 @@
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": [
-        "{options.outputFile}"
-      ],
+      "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": [
-          "libs/blocks/**/*.{ts,tsx,js,jsx}"
-        ]
+        "lintFilePatterns": ["libs/blocks/**/*.{ts,tsx,js,jsx}"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "coverage/libs/blocks"
-      ],
+      "outputs": ["coverage/libs/blocks"],
       "options": {
         "jestConfig": "libs/blocks/jest.config.ts",
         "passWithNoTests": true
@@ -67,9 +57,7 @@
     },
     "build-storybook": {
       "executor": "@nrwl/storybook:build",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "options": {
         "uiFramework": "@storybook/react",
         "outputPath": "dist/storybook/blocks",
@@ -81,6 +69,14 @@
         "ci": {
           "quiet": true
         }
+      }
+    },
+
+    "publish": {
+      "executor": "@nrwl/workspace:run-commands",
+      "outputs": [],
+      "options": {
+        "command": "cd dist/libs/blocks && npm publish --tag=latest --access public "
       }
     }
   }
