--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
   "editor.formatOnPaste": true,
   "editor.formatOnSave": true,
   "editor.tabSize": 2,
+  "editor.stickyScroll.enabled": true,
   "emmet.includeLanguages": {
     "javascript": "javascriptreact"
   },
@@ -34,13 +35,10 @@
   },
   "git.autofetch": true,
   "prettier.requireConfig": true,
-  "jest.coverageColors": {
-    "covered": "rgba(9, 156, 65, 1)",
-    "uncovered": "rgba(0, 0, 0, 1)",
-    "partially-covered": "rgba(235, 198, 52, 1)"
-  },
-  "jest.jestCommandLine": "yarn test",
-  "jest.showCoverageOnLoad": true,
+  "css.validate": false,
+  "less.validate": false,
+  "scss.validate": false,
+  "stylelint.validate": ["css", "scss"],
   "workbench.colorCustomizations": {
     "activityBar.activeBackground": "#567ebc",
     "activityBar.activeBorder": "#dce0e6",
