--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,136 +1,134 @@
-defaultSemverRangePrefix: ''
+defaultSemverRangePrefix: ""
 
 nodeLinker: node-modules
 
 packageExtensions:
-  # Each key is a descriptor covering a semver range. The extensions will be applied to any package whose version matches the specified range. This is true regardless of where the package comes from, so no distinction on whether they come from git or a registry, for example. Only the version matters.
-
-  '@nrwl/cypress@*':
+  "@nrwl/cypress@*":
     peerDependencies:
-      nx: '*'
-      typescript: '*'
-  '@nrwl/eslint-plugin-nx@*':
+      nx: "*"
+      typescript: "*"
+  "@nrwl/eslint-plugin-nx@*":
     peerDependencies:
-      eslint: '*'
-      nx: '*'
-  '@nrwl/jest@*':
+      eslint: "*"
+      nx: "*"
+  "@nrwl/jest@*":
     peerDependencies:
-      nx: '*'
-      typescript: '*'
+      nx: "*"
+      typescript: "*"
     peerDependenciesMeta:
       typescript:
         optional: true
-  '@nrwl/js@*':
+  "@nrwl/js@*":
     peerDependencies:
-      nx: '*'
-      typescript: '*'
+      nx: "*"
+      typescript: "*"
     peerDependenciesMeta:
       typescript:
         optional: true
-  '@nrwl/linter@*':
+  "@nrwl/linter@*":
     peerDependencies:
-      typescript: '*'
+      typescript: "*"
     peerDependenciesMeta:
       typescript:
         optional: true
-  '@nrwl/next@*':
+  "@nrwl/next@*":
     peerDependencies:
-      '@babel/core': '*'
-      '@types/node': '*'
-      dotenv: '*'
-      eslint: '*'
-      express: '*'
-      nx: '*'
-      tsconfig-paths-webpack-plugin: '*'
-      typescript: '*'
-      webpack: '*'
+      "@babel/core": "*"
+      "@types/node": "*"
+      dotenv: "*"
+      eslint: "*"
+      express: "*"
+      nx: "*"
+      tsconfig-paths-webpack-plugin: "*"
+      typescript: "*"
+      webpack: "*"
     peerDependenciesMeta:
-      '@types/node':
+      "@types/node":
         optional: true
       typescript:
         optional: true
       webpack:
         optional: true
-  '@nrwl/react@*':
+  "@nrwl/react@*":
     peerDependencies:
-      eslint: '*'
-      nx: '*'
-      typescript: '*'
+      eslint: "*"
+      nx: "*"
+      typescript: "*"
     peerDependenciesMeta:
       typescript:
         optional: true
-  '@nrwl/storybook@*':
+  "@nrwl/storybook@*":
     peerDependencies:
-      nx: '*'
-      typescript: '*'
-      webpack: '*'
+      nx: "*"
+      typescript: "*"
+      webpack: "*"
     peerDependenciesMeta:
       typescript:
         optional: true
-  '@nrwl/web@*':
+  "@nrwl/web@*":
     peerDependencies:
-      '@types/node': '*'
-      nx: '*'
-      typescript: '*'
+      "@types/node": "*"
+      nx: "*"
+      typescript: "*"
     peerDependenciesMeta:
-      '@types/node':
+      "@types/node":
         optional: true
       typescript:
+        optional: true
+  "@storybook/addon-docs@*":
+    peerDependencies:
+      "@babel/core": "*"
+      webpack: "*"
+    peerDependenciesMeta:
+      "@babel/core":
+        optional: true
+      webpack:
+        optional: true
+  "@storybook/docs-tools@*":
+    peerDependencies:
+      react: "*"
+      react-dom: "*"
+    peerDependenciesMeta:
+      react:
+        optional: true
+      react-dom:
+        optional: true
+  "@storybook/mdx1-csf@*":
+    peerDependencies:
+      "@babel/core": "*"
+    peerDependenciesMeta:
+      "@babel/core":
+        optional: true
+  "@storybook/telemetry@*":
+    peerDependencies:
+      react: "*"
+      react-dom: "*"
+    peerDependenciesMeta:
+      react:
+        optional: true
+      react-dom:
+        optional: true
+  "@yarn-tool/resolve-package@*":
+    peerDependencies:
+      "@types/node": "*"
+    peerDependenciesMeta:
+      "@types/node":
+        optional: true
+  storybook-dark-mode@*:
+    peerDependenciesMeta:
+      "@storybook/addons":
+        optional: true
+      "@storybook/api":
+        optional: true
+      "@storybook/components":
+        optional: true
+      "@storybook/core-events":
+        optional: true
+      "@storybook/theming":
         optional: true
   stylelint-config-recommended-scss@*:
     peerDependenciesMeta:
       postcss:
         optional: true
-  storybook-dark-mode@*:
-    peerDependenciesMeta:
-      '@storybook/addons':
-        optional: true
-      '@storybook/api':
-        optional: true
-      '@storybook/components':
-        optional: true
-      '@storybook/core-events':
-        optional: true
-      '@storybook/theming':
-        optional: true
-  '@storybook/addon-docs@*':
-    peerDependencies:
-      '@babel/core': '*'
-      'webpack': '*'
-    peerDependenciesMeta:
-      '@babel/core':
-        optional: true
-      'webpack':
-        optional: true
-  '@storybook/docs-tools@*':
-    peerDependencies:
-      'react': '*'
-      'react-dom': '*'
-    peerDependenciesMeta:
-      'react':
-        optional: true
-      'react-dom':
-        optional: true
-  '@storybook/telemetry@*':
-    peerDependencies:
-      'react': '*'
-      'react-dom': '*'
-    peerDependenciesMeta:
-      'react':
-        optional: true
-      'react-dom':
-        optional: true
-  '@storybook/mdx1-csf@*':
-    peerDependencies:
-      '@babel/core': '*'
-    peerDependenciesMeta:
-      '@babel/core':
-        optional: true
-  '@yarn-tool/resolve-package@*':
-    peerDependencies:
-      '@types/node': '*'
-    peerDependenciesMeta:
-      '@types/node':
-        optional: true
 
-yarnPath: .yarn/releases/yarn-3.2.0.cjs
+yarnPath: .yarn/releases/yarn-3.2.3.cjs
