--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-dom": "18.2.0",
     "react-error-boundary": "3.1.4",
     "regenerator-runtime": "0.13.9",
+    "rollup-plugin-commonjs": "10.1.0",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
@@ -65,6 +66,7 @@
     "@nrwl/storybook": "14.5.1",
     "@nrwl/web": "14.5.1",
     "@nrwl/workspace": "14.5.1",
+    "@rollup/plugin-commonjs": "22.0.1",
     "@rollup/plugin-node-resolve": "13.3.0",
     "@storybook/addon-a11y": "6.5.9",
     "@storybook/addon-essentials": "6.5.9",
@@ -117,5 +119,5 @@
     "url-loader": "^3.0.0",
     "webpack": "5.74.0"
   },
-  "packageManager": "yarn@3.2.0"
+  "packageManager": "yarn@3.2.3"
 }
