resolve peerDep warnings

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -3,16 +3,77 @@ defaultSemverRangePrefix: ''
 nodeLinker: node-modules
 
 packageExtensions:
-  '@nx/cypress@*':
+  '@nrwl/cypress@*':
     peerDependencies:
       nx: '*'
-      typescript: '*'
-  '@nrwl/devkit@*':
-    peerDependencies:
       typescript: '*'
     peerDependenciesMeta:
       typescript:
         optional: true
+  '@nrwl/eslint-plugin-nx@*':
+    peerDependencies:
+      nx: '*'
+      eslint: '*'
+      '@typescript-eslint/parser': '*'
+    peerDependenciesMeta:
+      typescript:
+        optional: true
+  '@nrwl/devkit@*':
+    peerDependencies:
+      nx: '*'
+      typescript: '*'
+    peerDependenciesMeta:
+      typescript:
+        optional: true
+  '@nrwl/jest@*':
+    peerDependencies:
+      nx: '*'
+  '@nrwl/js@*':
+    peerDependencies:
+      nx: '*'
+      typescript: '*'
+    peerDependenciesMeta:
+      typescript:
+        optional: true
+  '@nrwl/linter@*':
+    peerDependencies:
+      nx: '*'
+  '@nrwl/next@*':
+    peerDependencies:
+      '@babel/core': '*'
+      eslint: '*'
+      next: '*'
+      nx: '*'
+      tsconfig-paths-webpack-plugin: '*'
+  '@nrwl/react@*':
+    peerDependencies:
+      '@types/node': '*'
+      eslint: '*'
+      nx: '*'
+      webpack: '*'
+  '@nrwl/rollup@*':
+    peerDependencies:
+      '@babel/core': '*'
+      nx: '*'
+      typescript: '*'
+    peerDependenciesMeta:
+      typescript:
+        optional: true
+  '@nrwl/storybook@*':
+    peerDependencies:
+      nx: '*'
+      webpack: '*'
+  '@nrwl/web@*':
+    peerDependencies:
+      nx: '*'
+  '@nrwl/webpack@*':
+    peerDependencies:
+      '@types/node': '*'
+      nx: '*'
+  '@nx/cypress@*':
+    peerDependencies:
+      nx: '*'
+      typescript: '*'
   '@nx/eslint-plugin@*':
     peerDependencies:
       eslint: '*'
@@ -24,7 +85,7 @@ packageExtensions:
     peerDependenciesMeta:
       typescript:
         optional: true
-  '@nrwl/js@*':
+  '@nx/js@*':
     peerDependencies:
       nx: '*'
       typescript: '*'
@@ -33,6 +94,7 @@ packageExtensions:
         optional: true
   '@nx/linter@*':
     peerDependencies:
+      nx: '*'
       typescript: '*'
     peerDependenciesMeta:
       typescript:
@@ -58,16 +120,17 @@ packageExtensions:
   '@nx/react@*':
     peerDependencies:
       '@types/node': '*'
-      stylus: '*'
       eslint: '*'
       nx: '*'
+      stylus: '*'
       typescript: '*'
+      webpack: '*'
     peerDependenciesMeta:
-      typescript:
-        optional: true
       stylus:
         optional: true
-  '@nrwl/rollup@*':
+      typescript:
+        optional: true
+  '@nx/rollup@*':
     peerDependencies:
       '@babel/core': '*'
       nx: '*'
@@ -102,24 +165,26 @@ packageExtensions:
     peerDependenciesMeta:
       typescript:
         optional: true
+  '@storybook/addon-essentials@*':
+    peerDependencies:
+      '@babel/core': '*'
+      webpack: '*'
   '@storybook/addon-docs@*':
     peerDependencies:
       '@babel/core': '*'
-      'webpack': '*'
+      webpack: '*'
+  '@storybook/core-server@*':
+    peerDependencies:
+      react: '*'
+      react-dom: '*'
   '@storybook/docs-tools@*':
     peerDependencies:
-      'react': '*'
-      'react-dom': '*'
-  '@storybook/mdx1-csf@*':
-    peerDependencies:
-      '@babel/core': '*'
+      react: '*'
+      react-dom: '*'
   '@storybook/telemetry@*':
     peerDependencies:
-      'react': '*'
-      'react-dom': '*'
-  '@yarn-tool/resolve-package@*':
-    peerDependencies:
-      '@types/node': '*'
+      react: '*'
+      react-dom: '*'
   stylelint-config-recommended-scss@*:
     peerDependenciesMeta:
       postcss:
