--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "lint": "nx run-many --all --target=lint",
     "test": "nx run-many --all --target=test",
     "e2e": "nx run-many --all --target=e2e",
-    "build": "nx build",
     "publish": "nx publish blocks",
+    "build": "nx build",
+    "build:blocks": "nx build blocks",
     "build:storybook": "nx run blocks:build-storybook",
     "test:bjeco": "nx run bjeco:test",
     "test:blocks": "nx run blocks:test",
@@ -44,7 +45,7 @@
     "stylelint-order": "6.0.3"
   },
   "dependencies": {
-    "ariakit": "2.0.0-next.41",
+    "@ariakit/react": "0.2.14",
     "clsx": "2.0.0",
     "core-js": "3.32.0",
     "fathom-client": "3.5.0",
@@ -53,7 +54,7 @@
     "normalize.css": "8.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-error-boundary": "3.1.4",
+    "react-error-boundary": "4.0.10",
     "regenerator-runtime": "0.13.11",
     "rollup-plugin-commonjs": "10.1.0",
     "tslib": "2.6.1"
