chore: update ci

--- a/package.json
+++ b/package.json
@@ -1,24 +1,18 @@
 {
-  "name": "bjeco",
+  "name": "@bjeco/source",
   "version": "0.2.0",
   "private": true,
   "description": "https://bje.co",
   "repository": "https://github.com/brianespinosa/bjeco.git",
   "license": "MIT",
   "scripts": {
-    "start": "nx serve",
-    "lint": "nx run-many --all --target=lint",
-    "test": "nx run-many --all --target=test",
+    "start": "nx serve bjeco",
+    "build": "nx run-many --all --target=build --parallel=3",
+    "test": "nx run-many --all --target=test --parallel=3",
+    "lint": "nx run-many --all --target=lint --parallel=3",
     "e2e": "nx run-many --all --target=e2e",
     "publish": "nx publish blocks",
-    "build": "nx build",
     "build:blocks": "nx build blocks",
-    "build:storybook": "nx run blocks:build-storybook",
-    "test:bjeco": "nx run bjeco:test",
-    "test:blocks": "nx run blocks:test",
-    "e2e:bjeco": "nx e2e bjeco-e2e",
-    "e2e:blocks": "nx e2e blocks-e2e",
-    "storybook:blocks": "nx run blocks:storybook",
     "nx-latest": "nx migrate latest",
     "nx-migrate": "yarn install && nx migrate --run-migrations",
     "postinstall": "husky install"
