chore: no longer using zero installs

--- a/.gitignore
+++ b/.gitignore
@@ -58,10 +58,10 @@ build-storybook.log
 # vercel
 .vercel
 
-# yarn - Zero Installs
+# yarn - Not using Zero Installs
 # https://yarnpkg.com/getting-started/qa#which-files-should-be-gitignored
+.pnp.*
 .yarn/*
-!.yarn/cache
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
