chore: update deps

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,193 +1,206 @@
-defaultSemverRangePrefix: ""
+defaultSemverRangePrefix: ''
+
+logFilters:
+  - code: YN0002
+    level: error
+  - code: YN0060
+    level: error
 
 nodeLinker: node-modules
 
 packageExtensions:
-  "@nrwl/cypress@*":
+  '@nrwl/cypress@*':
     peerDependencies:
-      nx: "*"
-      typescript: "*"
+      nx: '*'
+      typescript: '*'
     peerDependenciesMeta:
       typescript:
         optional: true
-  "@nrwl/devkit@*":
+  '@nrwl/devkit@*':
     peerDependencies:
-      nx: "*"
-      typescript: "*"
+      nx: '*'
+      typescript: '*'
     peerDependenciesMeta:
       typescript:
         optional: true
-  "@nrwl/eslint-plugin-nx@*":
+  '@nrwl/eslint-plugin-nx@*':
     peerDependencies:
-      "@typescript-eslint/parser": "*"
-      eslint: "*"
-      nx: "*"
+      '@typescript-eslint/parser': '*'
+      eslint: '*'
+      nx: '*'
     peerDependenciesMeta:
       typescript:
         optional: true
-  "@nrwl/jest@*":
+  '@nrwl/jest@*':
     peerDependencies:
-      nx: "*"
-  "@nrwl/js@*":
+      nx: '*'
+  '@nrwl/js@*':
     peerDependencies:
-      nx: "*"
-      typescript: "*"
+      nx: '*'
+      typescript: '*'
     peerDependenciesMeta:
       typescript:
         optional: true
-  "@nrwl/linter@*":
+  '@nrwl/linter@*':
     peerDependencies:
-      nx: "*"
-  "@nrwl/next@*":
+      nx: '*'
+  '@nrwl/next@*':
     peerDependencies:
-      "@babel/core": "*"
-      eslint: "*"
-      next: "*"
-      nx: "*"
-      tsconfig-paths-webpack-plugin: "*"
-  "@nrwl/react@*":
+      '@babel/core': '*'
+      eslint: '*'
+      next: '*'
+      nx: '*'
+      tsconfig-paths-webpack-plugin: '*'
+  '@nrwl/react@*':
     peerDependencies:
-      "@types/node": "*"
-      eslint: "*"
-      nx: "*"
-      webpack: "*"
-  "@nrwl/rollup@*":
+      '@types/node': '*'
+      eslint: '*'
+      nx: '*'
+      webpack: '*'
+  '@nrwl/rollup@*':
     peerDependencies:
-      "@babel/core": "*"
-      nx: "*"
-      typescript: "*"
+      '@babel/core': '*'
+      nx: '*'
+      typescript: '*'
     peerDependenciesMeta:
       typescript:
         optional: true
-  "@nrwl/storybook@*":
+  '@nrwl/storybook@*':
     peerDependencies:
-      nx: "*"
-      webpack: "*"
-  "@nrwl/web@*":
+      nx: '*'
+      webpack: '*'
+  '@nrwl/web@*':
     peerDependencies:
-      nx: "*"
-  "@nrwl/webpack@*":
+      nx: '*'
+  '@nrwl/webpack@*':
     peerDependencies:
-      "@types/node": "*"
-      nx: "*"
-  "@nx/cypress@*":
+      '@types/node': '*'
+      nx: '*'
+  '@nx/cypress@*':
     peerDependencies:
-      nx: "*"
-      typescript: "*"
-  "@nx/eslint-plugin@*":
+      nx: '*'
+      typescript: '*'
+  '@nx/eslint-plugin@*':
     peerDependencies:
-      eslint: "*"
-      nx: "*"
-  "@nx/jest@*":
+      eslint: '*'
+      nx: '*'
+  '@nx/jest@*':
     peerDependencies:
-      nx: "*"
-      typescript: "*"
+      nx: '*'
+      typescript: '*'
     peerDependenciesMeta:
       typescript:
         optional: true
-  "@nx/js@*":
+  '@nx/js@*':
     peerDependencies:
-      nx: "*"
-      typescript: "*"
+      '@types/node': '*'
+      nx: '*'
+      typescript: '*'
+    peerDependenciesMeta:
+      '@types/node':
+        optional: true
+      typescript:
+        optional: true
+  '@nx/linter@*':
+    peerDependencies:
+      nx: '*'
+      typescript: '*'
     peerDependenciesMeta:
       typescript:
         optional: true
-  "@nx/linter@*":
+  '@nx/next@*':
     peerDependencies:
-      nx: "*"
-      typescript: "*"
+      '@babel/core': '*'
+      '@types/node': '*'
+      dotenv: '*'
+      eslint: '*'
+      express: '*'
+      nx: '*'
+      tsconfig-paths-webpack-plugin: '*'
+      typescript: '*'
+      webpack: '*'
     peerDependenciesMeta:
-      typescript:
+      '@types/node':
         optional: true
-  "@nx/next@*":
-    peerDependencies:
-      "@babel/core": "*"
-      "@types/node": "*"
-      dotenv: "*"
-      eslint: "*"
-      express: "*"
-      nx: "*"
-      tsconfig-paths-webpack-plugin: "*"
-      typescript: "*"
-      webpack: "*"
-    peerDependenciesMeta:
-      "@types/node":
+      dotenv:
+        optional: true
+      express:
         optional: true
       typescript:
         optional: true
       webpack:
         optional: true
-  "@nx/react@*":
+  '@nx/react@*':
     peerDependencies:
-      "@types/node": "*"
-      eslint: "*"
-      nx: "*"
-      stylus: "*"
-      typescript: "*"
-      webpack: "*"
+      '@types/node': '*'
+      eslint: '*'
+      nx: '*'
+      stylus: '*'
+      typescript: '*'
+      webpack: '*'
     peerDependenciesMeta:
       stylus:
         optional: true
       typescript:
         optional: true
-  "@nx/rollup@*":
+  '@nx/rollup@*':
     peerDependencies:
-      "@babel/core": "*"
-      nx: "*"
-      typescript: "*"
+      '@babel/core': '*'
+      nx: '*'
+      typescript: '*'
     peerDependenciesMeta:
       typescript:
         optional: true
-  "@nx/storybook@*":
+  '@nx/storybook@*':
     peerDependencies:
-      nx: "*"
-      typescript: "*"
-      webpack: "*"
+      nx: '*'
+      typescript: '*'
+      webpack: '*'
     peerDependenciesMeta:
       typescript:
         optional: true
-  "@nx/web@*":
+  '@nx/web@*':
     peerDependencies:
-      "@types/node": "*"
-      nx: "*"
-      typescript: "*"
+      '@types/node': '*'
+      nx: '*'
+      typescript: '*'
     peerDependenciesMeta:
-      "@types/node":
+      '@types/node':
         optional: true
       typescript:
         optional: true
-  "@nx/webpack@*":
+  '@nx/webpack@*':
     peerDependencies:
-      "@babel/core": "*"
-      "@types/node": "*"
-      nx: "*"
-      typescript: "*"
+      '@babel/core': '*'
+      '@types/node': '*'
+      nx: '*'
+      typescript: '*'
     peerDependenciesMeta:
       typescript:
         optional: true
-  "@storybook/addon-docs@*":
+  '@storybook/addon-docs@*':
     peerDependencies:
-      "@babel/core": "*"
-      webpack: "*"
-  "@storybook/addon-essentials@*":
+      '@babel/core': '*'
+      webpack: '*'
+  '@storybook/addon-essentials@*':
     peerDependencies:
-      "@babel/core": "*"
-      webpack: "*"
-  "@storybook/core-server@*":
+      '@babel/core': '*'
+      webpack: '*'
+  '@storybook/core-server@*':
     peerDependencies:
-      react: "*"
-      react-dom: "*"
-  "@storybook/docs-tools@*":
+      react: '*'
+      react-dom: '*'
+  '@storybook/docs-tools@*':
     peerDependencies:
-      react: "*"
-      react-dom: "*"
-  "@storybook/telemetry@*":
+      react: '*'
+      react-dom: '*'
+  '@storybook/telemetry@*':
     peerDependencies:
-      react: "*"
-      react-dom: "*"
+      react: '*'
+      react-dom: '*'
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-engines.cjs
-    spec: "https://raw.githubusercontent.com/devoto13/yarn-plugin-engines/main/bundles/%40yarnpkg/plugin-engines.js"
+    spec: 'https://raw.githubusercontent.com/devoto13/yarn-plugin-engines/main/bundles/%40yarnpkg/plugin-engines.js'
 
 yarnPath: .yarn/releases/yarn-3.6.1.cjs
