chore: update old configs and storybook

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -72,10 +72,6 @@ packageExtensions:
   '@nrwl/web@*':
     peerDependencies:
       nx: '*'
-  '@nrwl/webpack@*':
-    peerDependencies:
-      '@types/node': '*'
-      nx: '*'
   '@nx/cypress@*':
     peerDependencies:
       nx: '*'
@@ -126,6 +122,8 @@ packageExtensions:
         optional: true
       express:
         optional: true
+      tsconfig-paths-webpack-plugin:
+        optional: true
       typescript:
         optional: true
       webpack:
@@ -143,6 +141,8 @@ packageExtensions:
         optional: true
       typescript:
         optional: true
+      webpack:
+        optional: true
   '@nx/rollup@*':
     peerDependencies:
       '@babel/core': '*'
@@ -159,6 +159,8 @@ packageExtensions:
     peerDependenciesMeta:
       typescript:
         optional: true
+      webpack:
+        optional: true
   '@nx/web@*':
     peerDependencies:
       '@types/node': '*'
@@ -171,12 +173,12 @@ packageExtensions:
         optional: true
   '@nx/webpack@*':
     peerDependencies:
-      '@babel/core': '*'
-      '@types/node': '*'
       nx: '*'
       typescript: '*'
     peerDependenciesMeta:
       typescript:
+        optional: true
+      nx:
         optional: true
   '@storybook/addon-docs@*':
     peerDependencies:
@@ -186,6 +188,9 @@ packageExtensions:
     peerDependencies:
       '@babel/core': '*'
       webpack: '*'
+    peerDependenciesMeta:
+      webpack:
+        optional: true
   '@storybook/core-server@*':
     peerDependencies:
       react: '*'
