--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "repository": "https://github.com/brianespinosa/bjeco.git",
   "license": "MIT",
   "scripts": {
+    "all": "yarn lint && yarn test && yarn build && yarn nx run blocks:build-storybook && yarn e2e",
     "start": "nx serve bjeco",
     "build": "nx run-many --all --target=build --parallel=3",
     "test": "nx run-many --all --target=test --parallel=3",
@@ -38,6 +39,7 @@
   },
   "dependencies": {
     "@ariakit/react": "0.3.3",
+    "@nx/next": "16.9.1",
     "clsx": "2.0.0",
     "core-js": "3.32.2",
     "fathom-client": "3.5.0",
@@ -61,16 +63,12 @@
     "@nx/jest": "16.9.1",
     "@nx/js": "16.9.1",
     "@nx/linter": "16.9.1",
-    "@nx/next": "16.9.1",
     "@nx/react": "16.9.1",
     "@nx/rollup": "16.9.1",
     "@nx/storybook": "16.9.1",
     "@nx/web": "16.9.1",
     "@nx/webpack": "16.9.1",
     "@nx/workspace": "16.9.1",
-    "@pmmmwh/react-refresh-webpack-plugin": "0.5.11",
-    "@rollup/plugin-commonjs": "25.0.4",
-    "@rollup/plugin-node-resolve": "15.2.1",
     "@storybook/addon-a11y": "7.4.5",
     "@storybook/addon-essentials": "7.4.5",
     "@storybook/core-server": "7.4.5",
@@ -85,9 +83,6 @@
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "babel-jest": "29.7.0",
-    "babel-loader": "9.1.3",
-    "babel-plugin-macros": "3.1.0",
-    "css-loader": "6.8.1",
     "cypress": "13.2.0",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.3",
@@ -98,35 +93,23 @@
     "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-storybook": "0.6.14",
-    "express": "4.18.2",
     "husky": "8.0.3",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
-    "jest-junit": "16.0.0",
     "lint-staged": "14.0.1",
     "nx": "16.9.1",
     "nx-cloud": "16.4.0",
     "prettier": "3.0.3",
-    "react-refresh": "0.14.0",
-    "require-from-string": "2.0.2",
     "rollup": "3.29.3",
     "sass": "1.68.0",
-    "storybook-dark-mode": "3.0.1",
-    "style-loader": "3.3.3",
     "stylelint": "15.10.2",
     "stylelint-config-css-modules": "4.2.0",
     "stylelint-config-idiomatic-order": "9.0.0",
     "stylelint-config-recommended-scss": "12.0.0",
     "stylelint-config-standard": "33.0.0",
-    "stylus": "0.60.0",
-    "stylus-loader": "7.1.3",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
-    "tsconfig-paths-webpack-plugin": "4.1.0",
-    "typescript": "5.1.6",
-    "url-loader": "4.1.1",
-    "webpack": "5.88.2",
-    "webpack-merge": "5.9.0"
+    "typescript": "5.1.6"
   },
   "packageManager": "yarn@3.6.1"
 }
