--- a/apps/bjeco/project.json
+++ b/apps/bjeco/project.json
@@ -6,9 +6,7 @@
   "targets": {
     "build": {
       "executor": "@nx/next:build",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "defaultConfiguration": "production",
       "options": {
         "outputPath": "dist/apps/bjeco"
@@ -46,23 +44,23 @@
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": [
-        "{workspaceRoot}/coverage/apps/bjeco"
-      ],
+      "outputs": ["{workspaceRoot}/coverage/apps/bjeco"],
       "options": {
         "jestConfig": "apps/bjeco/jest.config.ts",
         "passWithNoTests": true
       }
     },
+    "stylelint": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "npx stylelint libs/blocks/**/*.{css,scss}"
+      }
+    },
     "lint": {
       "executor": "@nx/linter:eslint",
-      "outputs": [
-        "{options.outputFile}"
-      ],
+      "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": [
-          "apps/bjeco/**/*.{ts,tsx,js,jsx}"
-        ]
+        "lintFilePatterns": ["apps/bjeco/**/*.{ts,tsx,js,jsx}"]
       }
     }
   },
