--- a/libs/blocks/package.json
+++ b/libs/blocks/package.json
@@ -7,12 +7,15 @@
     "url": "https://github.com/brianespinosa/bjeco.git",
     "directory": "libs/blocks"
   },
-  "devDependencies": {
-    "@bjeco/utils": "*"
-  },
+  "license": "MIT",
   "peerDependencies": {
-    "react": "*",
-    "react-dom": "*"
+    "react": "^18",
+    "next": "^13"
   },
-  "license": "MIT"
+  "dependencies": {
+    "react-error-boundary": "4.0.11",
+    "fathom-client": "3.5.0",
+    "clsx": "2.0.0",
+    "@ariakit/react": "0.3.3"
+  }
 }
