--- a/libs/blocks/package.json
+++ b/libs/blocks/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bjeco/blocks",
   "author": "Brian Espinosa <b@bje.co>",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/brianespinosa/bjeco.git",
@@ -10,12 +10,13 @@
   "license": "MIT",
   "peerDependencies": {
     "react": "^18",
+    "react-dom": "^18",
     "next": "^13"
   },
   "dependencies": {
+    "@ariakit/react": "0.3.3",
     "react-error-boundary": "4.0.11",
     "fathom-client": "3.5.0",
-    "clsx": "2.0.0",
-    "@ariakit/react": "0.3.3"
+    "clsx": "2.0.0"
   }
 }
